Fixed spacing issue with grid project section

--- a/src/style/Projects.css
+++ b/src/style/Projects.css
@@ -6,7 +6,7 @@
 #Projects {
   display: grid;
   grid-template-columns: 30% 30% 30%;
-  grid-template-rows: 300px 300px;
+  grid-template-rows: 40% 40%;
   column-gap: 4%;
   row-gap: 5%;
   height:100%;
